@@ -15,15 +15,15 @@ HTTPD_SITES_ENABLED_DIR = /etc/nginx/sites-enabled
 HTTPD_ROOT_DIR = /var/www
 HTTPD_LOG_DIR = /var/log/nginx
 
-# Tmp root directory as provided by nginx package (from debian Team)
-HTTPD_TMP_ROOT_DIR_DEBIAN = /var/lib/nginx
-# Tmp root directory as provided by nginx package (from nginx Team)
-HTTPD_TMP_ROOT_DIR_NGINX = /var/cache/nginx
+# Cache base directory as provided by nginx package (from debian Team)
+HTTPD_CACHE_DIR_DEBIAN = /var/lib/nginx
+
+# Cache base directory as provided by nginx package (from nginx Team)
+HTTPD_CACHE_DIR_NGINX = /var/cache/nginx
 
 HTTPD_PID_FILE = /var/run/nginx.pid
 
 # PHP / FASTCGI variables
-
 PHP_STARTER_DIR = /var/www/fcgi
 PHP_CGI_BIN = /usr/bin/php5-cgi
 PHP_FCGI_CHILDREN = 5
